fixed wrapping tags in Tags: field

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1,14 +1,11 @@
 /*
 Theme Name: Best Reloaded
 Theme URI: http://www.pattonwebz.com/best-reloaded-bootstrap-theme
-Description: A mobile-first responsive WordPress theme that uses Bootstrap.
-    Based on the 'Best' theme from Blogging Experiment
+Description: A responsive, mobile-first, WordPress theme that uses Bootstrap.
 Author: William Patton
 Author URI: http://pattonwebz.com/
 Version: 0.5
-Tags: white, orange, light, left-sidebar, right-sidebar, responsive-layout,
-custom-colors, custom-menu, editor-style, featured-images, full-width-template,
-theme-options, threaded-comments, translation-ready
+Tags: white, orange, light, left-sidebar, right-sidebar, responsive-layout, custom-colors, custom-menu, editor-style, featured-images, full-width-template, theme-options, threaded-comments, translation-ready
 
 License: GNU General Public License (3.0)
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
